# cpu6502emulator

./: .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile.arch  Dockerfile.d12  Dockerfile.u22  Makefile  README.md  main.cpp
.github/workflows/: arch.yml  clang-tidy.yml  clang.yml  cmake.yml  code_formatting.yml  debian12.yml  docker_build.yml  gcc.yml  ubuntu22.yml  ubuntu22_docker.yml
cpu6502/: CMakeLists.txt  cpu.hpp  memory.hpp  registers.hpp  required.hpp
cpu6502/InstructionSet/: InstructionSet.hpp  opcode.hpp
cpu6502/InstructionSet/JumpsCalls/: JMP.cpp  JSR.cpp  RTS.cpp
cpu6502/InstructionSet/LoadStoreOperations/: LoadAccumulator.hpp
cpu6502/cpu/: InstructionSet.cpp  cpu.cpp  execute_instruction.cpp
cpu6502/cpu/InstructionSet/: opcode.hpp
cpu6502/cpu/InstructionSet/Arithmetic/: ADC.cpp  CMP.cpp  CPX.cpp  CPY.cpp  MUL.cpp  SBC.cpp
cpu6502/cpu/InstructionSet/Branches/: BRANCHES.cpp
cpu6502/cpu/InstructionSet/IncrementsDecrements/: DEC.cpp  DEX.cpp  DEY.cpp  INC.cpp  INX.cpp  INY.cpp
cpu6502/cpu/InstructionSet/JumpsCalls/: JMP.cpp  JSR.cpp  RTS.cpp
cpu6502/cpu/InstructionSet/LoadStoreOperations/: LDA.cpp  LDX.cpp  LDY.cpp  STA.cpp  STX.cpp  STY.cpp
cpu6502/cpu/InstructionSet/Logical/: AND.cpp  BIT.cpp  EOR.cpp  ORA.cpp
cpu6502/cpu/InstructionSet/RegisterTransfers/: TAX.cpp  TAY.cpp  TXA.cpp  TYA.cpp
cpu6502/cpu/InstructionSet/Shifts/: ASL.cpp  LSR.cpp  ROL.cpp  ROR.cpp
cpu6502/cpu/InstructionSet/StackOperations/: PHA.cpp  PHP.cpp  PLA.cpp  PLP.cpp  TSX.cpp  TXS.cpp
cpu6502/cpu/InstructionSet/StatusFlagChanges/: CLC.cpp  CLD.cpp  CLI.cpp  CLV.cpp  SEC.cpp  SED.cpp  SEI.cpp
cpu6502/cpu/InstructionSet/SystemFunctions/: BRK.cpp  NOP.cpp  RTI.cpp
cpu6502/cpu/WriteRead/: read.cpp  write.cpp
cpu6502/exceptions/: CMakeLists.txt  cpu_except.cpp  cpu_except.hpp
cpu6502/memory/: CMakeLists.txt  memory.cpp  memory.hpp
cpu6502/registers/: CMakeLists.txt  accumulator.cpp  accumulator.hpp  indexregisterx.cpp  indexregisterx.hpp  indexregistery.cpp  indexregistery.hpp  processorstatus.cpp  processorstatus.hpp  programcounter.cpp  programcounter.hpp  registers.cpp  registers.hpp  stackpointer.cpp  stackpointer.hpp  test.cpp  test.hpp
examples/: factorial.asm  fibonacci.asm
gui/: CMakeLists.txt  concept.ui  gui_req.txt  ui_to_h.sh
gui/images/: source.txt
gui/include/: constant.hpp  gui_manager.hpp  gui_utils.hpp  qt_gui.h  utils.hpp
gui/src/: CMakeLists.txt  asm_menu.cpp  debug_menu.cpp  debug_mode.cpp  execute.cpp  gui_main.cpp  gui_manager.cpp  gui_utils.cpp  memory_edit.cpp  memreg_edit.cpp  menu_bar.cpp  qt_gui.h  refresh_menu.cpp  setup_interface.cpp  utils.cpp
interpreter/: CMakeLists.txt  instruction.hpp  interp_except.hpp  interp_utils.hpp  interpreter.hpp  utility.hpp
interpreter/src/: debug_mode.cpp  instruction.cpp  interp_except.cpp  interpreter.cpp  interpreter_load_ins.cpp
interpreter/src/utility/: interp_utils.cpp  is_accumulator.cpp  is_immediate.cpp  is_implicit.cpp  is_indirect.cpp  is_indirect_x.cpp  is_indirect_y.cpp  is_relative.cpp  is_zero_page_or_absolute.cpp  is_zero_page_x_or_absolute_x.cpp  is_zero_page_y_or_absolute_y.cpp  opcode_map.cpp  utility.cpp
tests/: ALL_TEST.HPP  CMakeLists.txt  all_test.hpp  cpu_test.hpp  instruction_test.hpp  interpreter_test.hpp  register_test.hpp  stack_test.hpp  test_logger.hpp  test_main.cpp  time.hpp
tests/InstructionSetTest/: AND.HPP  BIT.HPP  BRANCHES_TEST.HPP  EOR.HPP  JMP_TEST.HPP  LDA_TEST.HPP  LDX_TEST.HPP  LDY_TEST.HPP  ORA.HPP  REGISTER_TRANSFER.HPP  RTS_JSR_TEST.HPP  STACK_OPERATIONS.HPP  STA_TEST.HPP  STX_TEST.HPP  STY_TEST.HPP  StatusFlagChanges.HPP
tests/src/: ALL_TEST.cpp  all_test.cpp  cpu_test.cpp  register_test.cpp  stack_test.cpp  test_logger.cpp  time.cpp
tests/src/instruction/: ADC.cpp  AND.cpp  ASL.cpp  BIT.cpp  BRANCHES.cpp  BRK.cpp  CMP.cpp  CPX.cpp  CPY.cpp  DEC.cpp  DEX.cpp  DEY.cpp  EOR.cpp  INC.cpp  INX.cpp  INY.cpp  JMP.cpp  LDA.cpp  LDX.cpp  LDY.cpp  LSR.cpp  MUL.cpp  NOP.cpp  ORA.cpp  ROL.cpp  ROR.cpp  RTI.cpp  RTS_JSR.cpp  RegisterTransfer.cpp  SBC.cpp  STA.cpp  STX.cpp  STY.cpp  StackOperations.cpp  StatusFlagChanges.cpp
tests/src/interpreter/: debug_mode.cpp  factorial.cpp  fibonacci.cpp  interpreter_test.cpp  label_comment.cpp
tests/src/interpreter/addressing/: absolute.cpp  absolute_x.cpp  absolute_y.cpp  accumulator.cpp  immediate.cpp  implicit.cpp  indirect.cpp  indirect_x.cpp  indirect_y.cpp  relative.cpp  zero_page.cpp  zero_page_x.cpp  zero_page_y.cpp
tests/src/other_tests/: memory_test.cpp  register_test.cpp  stack_test.cpp
tests/src/utility/: test_logger.cpp  test_utils.cpp  time.cpp  utility.cpp
tests/utility/: test_logger.hpp  test_utils.hpp  time.hpp  utility.hpp
